fix:修复二进制文件mybatis plus启动报错